@@ -6,7 +6,8 @@ cod-tools (unreleased)
         than one dictionary category;
       - check that reports unique loop key violations. 
     - COD::CIF::DDL::DDL1:
-      - the get_category_name() subroutine.
+      - the get_category_name() subroutine;
+      - the get_list_mandatory_flag() subroutine.
   * Changed:
     - cifvalues:
       - updated the help message.
